# fastapi-102

./: .gitignore  README.txt
backend/: .env.template  auth.py  database.py  main.py  models.py  pyproject.toml
backend/tests/: fake_users.py  load_fake_users.py  test_api-2.py  test_api-3.py  test_api.py  test_main.py
frontend/: app.py  pyproject.toml  signup.py  vip_dashboard.py
