[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
